--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ main {
     max-width: 150px;
 }
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+.section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
