--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ main {
 }
 
 
-.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
+.section2 h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
